force-app/main/default/objects/Survey_Question__c/fields/Answers_That_Request_More_Info__c.field-meta.xml
<CustomField>
    <fullName>Answers_That_Request_More_Info__c</fullName>
    <inlineHelpText>The responses listed here prompt the user for more detail.</inlineHelpText>
    <label>Answers That Request More Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>