force-app/main/default/objects/Survey_Question__c/fields/Binary_Label_A__c.field-meta.xml
<CustomField>
    <fullName>Binary_Label_A__c</fullName>
    <defaultValue>&quot;Yes&quot;</defaultValue>
    <label>Binary Label A</label>
    <length>80</length>
    <type>Text</type>
</CustomField>