force-app/main/default/objects/Survey_Question__c/fields/Binary_Label_B__c.field-meta.xml
<CustomField>
    <fullName>Binary_Label_B__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Binary Label B</label>
    <length>80</length>
    <type>Text</type>
</CustomField>