force-app/main/default/objects/Survey_Question__c/fields/Followup_Order__c.field-meta.xml
<CustomField>
    <fullName>Followup_Order__c</fullName>
    <inlineHelpText>Determines the order the follow-ups appear in. Does not do anything for non-followup questions.</inlineHelpText>
    <label>Followup Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>