force-app/main/default/objects/Survey_Question__c/fields/More_Info_Prompt__c.field-meta.xml
<CustomField>
    <fullName>More_Info_Prompt__c</fullName>
    <inlineHelpText>The text to display when the system requests the user to provide more information.</inlineHelpText>
    <label>More Info Prompt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>