force-app/main/default/objects/Survey_Question__c/fields/Picklist_Options__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Options__c</fullName>
    <label>Picklist Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>