force-app/main/default/objects/Survey_Question__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <inlineHelpText>The question or prompt you wish to display.</inlineHelpText>
    <label>Prompt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>