force-app/main/default/objects/Survey_Question__c/fields/Range_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Range_Maximum__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>The maximum option available for a Range Type Question.</inlineHelpText>
    <label>Range Maximum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>