force-app/main/default/objects/Survey_Question__c/fields/Range_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Range_Minimum__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>The minimum option available for a Range Type Question.</inlineHelpText>
    <label>Range Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>