force-app/main/default/objects/Survey_Question__c/fields/Range_Step__c.field-meta.xml
<CustomField>
    <fullName>Range_Step__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>The increment between options in a Range Type Question</inlineHelpText>
    <label>Range Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>